# advent-of-code

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  AdventOfCode.sln  CMakeLists.txt  CMakeSettings.json  Cargo.toml  Inputs.cmake  README.md  advent-of-code.sublime-project  build-cpp  build-cpp.cmd  build-cpp.sh  build-odin.ps1  build-rust.cmd  build-zig.cmd  build.zig  build.zig.zon  configure-cpp  configure-cpp.cmd  configure-cpp.sh  day01.cpp  day01.hpp  day02.cpp  day02.hpp  day03.cpp  day03.hpp  day04.cpp  day04.hpp  day05.cpp  day05.hpp  day06.cpp  day06.hpp  day07.cpp  day07.hpp  day08.cpp  day08.hpp  day09.cpp  (+27 more)
.helix/: languages.toml
common/: common.hpp  common.vcxproj  common.vcxproj.filters  input.cpp  input.hpp  intcode.cpp  intcode.hpp  main.cpp  main.hpp  point.hpp  string.cpp  string.hpp  terminal.cpp
day01/: day01.cpp  day01.vcxproj  input.hpp
day02/: day02.cpp  day02.vcxproj  day02.vcxproj.filters  input.hpp
day05/: day05.cpp  day05.hpp  day05.vcxproj  day05.vcxproj.filters
day07/: day07.cpp  day07.hpp  day07.vcxproj  day07.vcxproj.filters
day09/: day09.cpp  day09.vcxproj  day09.vcxproj.filters
day16/: day16.cpp  day16.hpp  day16.vcxproj  day16.vcxproj.filters
day17/: day17.cpp  day17.vcxproj  day17.vcxproj.filters
day19/: day19.cpp  day19.hpp  day19.vcxproj  day19.vcxproj.filters
inputs/: 16.input  2.input  3.input  5.input  7.input  8.input  9.input
src/: assert.hpp  clipboard-linux.zig  clipboard-windows.zig  clipboard.zig  combinations.hpp  common.hpp  cpp-utils.hpp  day01.cpp  day02.cpp  day02.hpp  day03.cpp  day03.hpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day09.hpp  day10.cpp  day11.cpp  day11.hpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day15.hpp  day16.cpp  day16.hpp  day17.cpp  day19.cpp  intcode.cpp  intcode.hpp  md5.c  md5.hpp  point.hpp  string.cpp  string.hpp  terminal.cpp  terminal.hpp  (+3 more)
src/2015/: day01.cpp  day01.hpp  day02.cpp  day02.hpp  day03.cpp  day03.hpp  day04.cpp  day04.hpp  day05.cpp  day05.hpp  day06.cpp  day06.hpp  day07.cpp  day08.cpp  day08.hpp  day09.cpp  day09.hpp  day1.cpp  day10.cpp  day10.hpp  day11.cpp  day12.cpp  day12.hpp  day13.cpp  day13.hpp  day14.cpp  day14.hpp  day15.cpp  day15.hpp  day16.cpp  day16.hpp  day17.cpp  day17.hpp  day18.cpp  day18.hpp  day19.cpp  day19.hpp  day2.cpp  day20.cpp  day20.hpp  (+24 more)
src/2016/: day1.cpp  day1.hpp  day1.nu  day10.rs  day2.cpp  day2.hpp  day3.cpp  day3.hpp  day4.cpp  day4.hpp  day5.nu  day5.rs  day5.zig  day6.rs  day7.rs  day8.rs  day8.zig  day9.rs
src/2017/: day1.zig  day2.zig
src/2019/: day01.cpp  day01.hpp  day02.cpp  day02.hpp  day03.cpp  day03.hpp  day04.cpp  day05.cpp  day05.hpp  day06.cpp  day07.cpp  day07.hpp  day08.cpp  day08.hpp  day09.cpp  day09.hpp  day1.cpp  day1.zig  day10.cpp  day10.hpp  day11.cpp  day11.hpp  day12.cpp  day12.hpp  day13.cpp  day13.hpp  day14.cpp  day14.hpp  day15.cpp  day15.hpp  day16.cpp  day16.hpp  day17.cpp  day17.hpp  day19.cpp  day19.hpp  day2.cpp  day2.hpp  day2.odin  day3.cpp  (+11 more)
src/2020/: day01.cpp  day01.hpp  day02.cpp  day02.hpp  day03.cpp  day03.hpp  day04.cpp  day04.hpp  day05.cpp  day05.hpp  day06.cpp  day06.hpp  day07.cpp  day07.hpp  day08.cpp  day08.hpp  day09.cpp  day09.hpp  day1.cpp  day1.hpp  day10.cpp  day10.hpp  day11.cpp  day11.hpp  day12.cpp  day12.hpp  day13.cpp  day13.hpp  day14.cpp  day14.hpp  day15.cpp  day15.hpp  day16.cpp  day16.hpp  day17.cpp  day17.hpp  day18.cpp  day18.hpp  day19.cpp  day19.hpp  (+16 more)
src/2021/: day01.cpp  day01.hpp  day02.cpp  day03.cpp  day03.hpp  day04.cpp  day04.hpp  day05.cpp  day06.cpp  day06.hpp  day07.cpp  day08.cpp  day1.cpp  day1.hpp  day10.cpp  day10.hpp  day11.cpp  day11.hpp  day12.cpp  day12.hpp  day13.cpp  day13.hpp  day14.cpp  day14.hpp  day15.cpp  day15.hpp  day2.cpp  day2.hpp  day3.cpp  day3.hpp  day4.cpp  day4.hpp  day5.cpp  day5.hpp  day6.cpp  day6.hpp  day7.cpp  day7.hpp  day8.cpp  day8.hpp  (+2 more)
src/2022/: day1.cpp  day1.hpp  day10.cpp  day10.hpp  day11.cpp  day11.hpp  day12.cpp  day12.hpp  day13.cpp  day13.hpp  day14.cpp  day14.hpp  day15.cpp  day15.hpp  day16.cpp  day16.hpp  day2.cpp  day2.hpp  day3.cpp  day3.hpp  day4.cpp  day4.hpp  day5.cpp  day5.hpp  day6.cpp  day6.hpp  day7.cpp  day7.hpp  day8.cpp  day8.hpp  day9.cpp  day9.hpp
src/2023/: day1.cpp  day1.hpp  day1.zig  day10.zig  day11.zig  day12.rs  day12.zig  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day2.cpp  day2.hpp  day2.zig  day3.cpp  day3.hpp  day3.zig  day4.cpp  day4.hpp  day4.zig  day5.cpp  day5.hpp  day5.rs  day6.cpp  day6.hpp  day7.cpp  day7.hpp  day8.zig  day9.zig
src/2024/: day1.nu  day1.rs  day1.zig  day10.zig  day11.zig  day12.zig  day13.zig  day14.zig  day15.zig  day16.rs  day16.zig  day17.zig  day18.rs  day18.zig  day19.zig  day2.zig  day20.zig  day21.zig  day22.zig  day23.zig  day24.zig  day25.zig  day3.rs  day3.zig  day4.zig  day5.rs  day5.zig  day6.rs  day6.zig  day7.rs  day7.zig  day8.rs  day8.zig  day9.nu  day9.py  day9.rs  day9.zig
src/2025/: day1.zig  day10.zig  day11.zig  day12.zig  day2.zig  day3.zig  day4.zig  day5.zig  day6.zig  day7.zig  day8.zig  day9.zig
src/2025/day10/: part2.cmd  part2.py  pyproject.toml
src/common/: assert.hpp  defaultdict.hpp  dijkstra.hpp  generator.hpp  input.hpp  intcode.cpp  md5.hpp  numbers.hpp  point.hpp  point2d.hpp  point3d.hpp  point4d.hpp  range.hpp  string.cpp  string.hpp  terminal.cpp  terminal.hpp  utils.hpp
src/cpp-utils/: combinations.hpp  generator.hpp  input.hpp  intcode.cpp  md5.h  md5.hpp  point2d.hpp  point3d.hpp  string.cpp  string.hpp
src/odin-utils/: intcode.odin  utils.odin
src/zig-utils/: clipboard-windows.zig  platform-linux.zig  platform-windows.zig  platform.zig  utils.zig
