[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "2023-5"
path = "src/2023/day5.rs"

[[bin]]
name = "2023-12"
path = "src/2023/day12.rs"

[[bin]]
name = "2023-13"
path = "src/2023/day13.rs"

[[bin]]
name = "2023-14"
path = "src/2023/day14.rs"

[[bin]]
name = "2023-15"
path = "src/2023/day15.rs"

[[bin]]
name = "2023-16"
path = "src/2023/day16.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
