[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "2016-5"
path = "src/2016/day5.rs"

[[bin]]
name = "2016-6"
path = "src/2016/day6.rs"

[[bin]]
name = "2016-7"
path = "src/2016/day7.rs"

[[bin]]
name = "2016-8"
path = "src/2016/day8.rs"

[[bin]]
name = "2016-9"
path = "src/2016/day9.rs"

[[bin]]
name = "2016-10"
path = "src/2016/day10.rs"

[[bin]]
name = "2023-5"
path = "src/2023/day5.rs"

[[bin]]
name = "2023-12"
path = "src/2023/day12.rs"

[[bin]]
name = "2023-13"
path = "src/2023/day13.rs"

[[bin]]
name = "2023-14"
path = "src/2023/day14.rs"

[[bin]]
name = "2023-15"
path = "src/2023/day15.rs"

[[bin]]
name = "2023-16"
path = "src/2023/day16.rs"

[[bin]]
name = "2023-17"
path = "src/2023/day17.rs"

[[bin]]
name = "2023-18"
path = "src/2023/day18.rs"

[[bin]]
name = "2024-1"
path = "src/2024/day1.rs"

[[bin]]
name = "2024-3"
path = "src/2024/day3.rs"

[[bin]]
name = "2024-5"
path = "src/2024/day5.rs"

[[bin]]
name = "2024-6"
path = "src/2024/day6.rs"

[[bin]]
name = "2024-7"
path = "src/2024/day7.rs"

[[bin]]
name = "2024-8"
path = "src/2024/day8.rs"

[[bin]]
name = "2024-16"
path = "src/2024/day16.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.8"
pathfinding = "4.6.0"
md5 = "0.7.0"
regex = "1.11.1"
itertools = "0.13.0"
